# biotarget-scout

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
docs/: README.md  frontend-api.md  system-flow.md
examples/: README.md
scripts/: run_dev.ps1
src/biotarget_scout/: __init__.py
src/biotarget_scout.egg-info/: PKG-INFO
src/biotarget_scout/agents/: __init__.py  confidence.py  kg_agent.py  literature_agent.py  omics_agent.py  orchestrator.py  planner.py  report_assembler.py  synthesis.py
src/biotarget_scout/api/: __init__.py  app.py  deps.py
src/biotarget_scout/api/routes/: hypothesis.py
src/biotarget_scout/core/: config.py  human_log.py  logging.py  tooling.py
src/biotarget_scout/models/: schemas.py
src/biotarget_scout/retrieval/: __init__.py  fresh_fetcher.py  hybrid.py  indexer.py
src/biotarget_scout/tools/: drug_support.py  knowledge.py  ner.py  omics.py  pubmed.py
tests/: conftest.py  test_smoke.py
tests/agents/: test_confidence.py  test_orchestrator.py  test_planner_resolve.py
tests/api/: test_app.py
tests/evaluation/: test_eval_harness.py
tests/retrieval/: test_fresh_fetcher.py  test_hybrid.py
tests/tools/: test_drug_support.py  test_knowledge.py  test_ner.py  test_omics.py  test_pubmed.py
web/: index.html
web/static/: app.js  styles.css
